--- a/.github/workflows/grp.yml
+++ b/.github/workflows/grp.yml
@@ -20,4 +20,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npm node/grp/default
+    - run: node node/grp/default
