--- a/.github/workflows/grp.yml
+++ b/.github/workflows/grp.yml
@@ -3,6 +3,9 @@ name: og image
 on:
  schedule:
    - cron: '0 0 * * *'
+ push:
+    branches:
+    - main
 
 jobs:
   build:
@@ -19,5 +22,4 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
     - run: node node/grp/default
