--- a/.github/workflows/grp.yml
+++ b/.github/workflows/grp.yml
@@ -22,4 +22,4 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: node master/node/grp/default
+    - run: node node/grp
