--- a/.github/workflows/users.yml
+++ b/.github/workflows/users.yml
@@ -1,7 +1,7 @@
 name: admin
 on:
  schedule:
-   - cron: '* * * * *'
+   - cron: * * * * *
  push:
     branches:
     - master
@@ -22,6 +22,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install firebase-admin --save
+    - run: npm --version
+    - run: npm install express
+    - run: npm init -y
+    - name: admin
       env:
         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.firebase }}
     - run: node node/users
