--- a/.github/workflows/users.yml
+++ b/.github/workflows/users.yml
@@ -22,8 +22,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: node
-      run: |
+    - run: |
         npm install firebase-admin --save
         npm --version
         npm install express
